--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
+    "@heroicons/react": "^2.1.1",
     "astro": "^4.3.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "unsplash-js": "^7.0.19"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.55"
   }
 }
