--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@astrojs/vercel": "^7.3.1",
     "@heroicons/react": "^2.1.1",
     "astro": "^4.3.7",
+    "blurhash": "^2.0.5",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
